--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
 contact_links:
   - name: Question
-    url: https://github.com/amkillam/tokio-sink/discussions
-    about: Questions about tokio-sink should be posted as a GitHub discussion.
+    url: https://github.com/amkillam/async-sink/discussions
+    about: Questions about async-sink should be posted as a GitHub discussion.
